# device-advisor

./: .env.example  .gitignore  LICENSE  README.md  app.py  conftest.py  main.py  pyproject.toml  requirements.txt
data/: brands.json
fixtures/: apple_iphone_17e_spec.html  samsung_listing.html
scripts/: crawl_listings.py  crawl_specs.py  e2e_test.py  fetch_brands.py  live_test.py  merge_brands.py  validate_proxies.py  verify.py
src/: __init__.py
src/client/: client.py
src/extraction/: index.py  listing.py  specs.py
src/identity/: base.py  pool.py  proxy.py  tor.py
src/models/: device.py
src/orchestration/: runner.py
src/scraper/: __init__.py
src/scraper/crawl/: __init__.py  crawl_listings.py  crawl_specs.py  dashboard.py  fetch_brands.py  runtime.py
src/scraper/identity/: __init__.py  models.py  pool.py  proxy_source.py
src/scraper/net/: __init__.py  client.py  throttle.py  user_agents.py
src/scraper/parsing/: __init__.py  brands.py  listings.py  specs.py
src/settings/: __init__.py  logging.py
src/shared/: __init__.py  console.py  logging_setup.py  redact.py  settings.py  storage.py
src/taskqueue/: queue.py
src/throttle/: aimd.py
tests/: test_listing.py  test_specs.py
tests/scraper/: test_client.py  test_crawl_listings.py  test_crawl_specs.py  test_fetch_brands.py  test_identity_pool.py  test_parsing_brands.py  test_parsing_listings.py  test_parsing_specs.py  test_proxy_source.py  test_runtime.py
tests/shared/: test_logging_setup.py  test_redact.py  test_settings.py  test_storage.py
