[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "device-advisor"
version = "0.1.0"
description = "Conversational device recommendation system"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.0",
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=5.0.0",
    "stem>=1.8.0",
    "gradio>=6.0.0",
    "tqdm>=4.66.0",
]

[project.urls]
Source = "https://github.com/elgebalymoazmaher/device-advisor"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
