[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "device-advisor"
version = "0.1.0"
description = "Conversational device recommendation system"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.0",
    "beautifulsoup4>=4.14.0",
    "gradio>=6.0.0",
    "rich>=15.0.0",
]

[project.urls]
Source = "https://github.com/elgebalymoazmaher/device-advisor"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
