[project]
name = "device-advisor"
version = "0.1.0"
description = "Collects device data from GSMArena for the device-advisor project."
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]==0.28.1",
    "beautifulsoup4==4.14.3",
    "rich==13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
